--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -21,3 +21,9 @@ agill:
   title: UX Engineer @ Layer
   url: https://github.com/ayaanglayer
   image_url: https://avatars.githubusercontent.com/u/165331764?s=400&u=f48ff3e02dbe6b55351f2281b482cdaa96e0808c&v=4
+
+jkatz:
+  name: Jonah Katz
+  title: CEO @ Layer
+  url: https://www.linkedin.com/in/jonahkatz1/
+  image_url: https://media.licdn.com/dms/image/v2/D5603AQGcdwug9LunVA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1727827703156?e=1743638400&v=beta&t=S4adBtUI5ELMYeuV-xjKvHl5lB8k6IaQ6T6gXhVvuuk
