--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 aham:
   name: Andrew Hamilton
-  title: Software Engineer @ Layer
+  title: Co-Founder and CTO @ Layer
   url: https://github.com/andrewlayer
   image_url: https://avatars.githubusercontent.com/u/135887157?v=4
 
@@ -24,6 +24,6 @@ agill:
 
 jkatz:
   name: Jonah Katz
-  title: CEO @ Layer
+  title: Co-Founder and CEO @ Layer
   url: https://www.linkedin.com/in/jonahkatz1/
   image_url: https://media.licdn.com/dms/image/v2/D5603AQGcdwug9LunVA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1727827703156?e=1743638400&v=beta&t=S4adBtUI5ELMYeuV-xjKvHl5lB8k6IaQ6T6gXhVvuuk
