--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -27,3 +27,9 @@ jkatz:
   title: Co-Founder and CEO @ Layer
   url: https://www.linkedin.com/in/jonahkatz1/
   image_url: https://media.licdn.com/dms/image/v2/D4D03AQH2LNM38t56gw/profile-displayphoto-shrink_400_400/B4DZUFQFoiHwAg-/0/1739549859357?e=1750896000&v=beta&t=3JelS5353YAxkDraXWzayDfBU2TYxuIwUuPOWpgaTH0
+
+jzalman:
+  name: Jonathan Zalman
+  title: Head of Marketing @ Layer
+  url: https://www.linkedin.com/in/jzalman/
+  image_url: https://media.licdn.com/dms/image/v2/D5603AQEUMO7QJojrJA/profile-displayphoto-shrink_400_400/B56ZR15uGIHQAg-/0/1737144853170?e=1752105600&v=beta&t=E2oGgJhhvMXjVnqbzhBAxyXIq_f7qmXZkitWIn6e3oU
